# algoritmos-proyecto10-pc5

./: README.md  instructions.md  pyproject.toml  requirements.txt
config/: setting.py
demos/: demo_consistent_hashing.py  demo_full_system_run.py  demo_m_tree_local.py  demo_orchestrator_interaction.py  demo_single_worker_api.py
scripts/: run_all.sh  start_orchestrator.sh  start_workers.sh  virtual_env.sh
src/benchmarking/: benchmark_distributed.py  benchmark_local.py
src/common/: models.py  utils.py
src/consistent_hashing/: consistent_hasher.py
src/m_tree/: node.py
src/orchestrator/: app.py  orchestrator_service.py
src/profiling/: profile_mt_insert.py  profile_worker.py
src/simulation/: data_generator.py
src/worker_node/: app.py  worker_service.py
tests/: test_consistent_hashing.py  test_m_tree.py  test_orchestrator.py  test_worker_node.py
